added styling to navbar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <! --- navbar --->
     
-    <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #ffffff;" <a class="navbar-brand" href="index.html"> <img src="./assets/images/Coffee-Project-Logo.png" width="200px" alt="bbb-logo"></a>
+    <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/Coffee-Project-Logo.png" width="120px" alt="bbb-logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
