--- a/index.html
+++ b/index.html
@@ -41,17 +41,19 @@
     </div>
   </nav>
 
+
 </header>
+
 
 <! --- jumbotron hero image --->
 
 <div class="container">
   <div class="row">
     <div class="col">
-      <div class="jumbotron">
+      <div class="jumbotron jumbotron-container">
         <h1 class="display-4">Welcome</h1>
         <p class="lead">we are a wholesale coffee roastery renowned for sourcing speciality coffee from all over the world.</p>
-        <hr class="my-4">
+        <hr class="my-4 jumbotron-divider">
         <p>We now supplement our own barista training courses with SCA Coffee Skills modules. <span class="badge badge-light">New!</span></p>
 
       </div>
@@ -61,7 +63,13 @@
 
 <! --- about us --->
 
-
+<div class="container">
+  <div class="row">
+    <div class="col">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, voluptatum assumenda tempore consequatur totam sequi aliquam magni sit porro id.
+    </div>
+  </div>
+</div>
 
 
 
