added media queries, quote-landing

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, voluptatum assumenda tempore consequatur totam sequi aliquam magni sit porro id.
+      <div class="quote-landing">
+        <p class="quote">Life is too short, enjoy your coffee</p>
+      </div>
+      
     </div>
   </div>
 </div>
