added about section

--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
     <div class="col">
       <div class="jumbotron jumbotron-container">
         <h1 class="display-4">Welcome</h1>
-        <p class="lead">we are a wholesale coffee roastery renowned for sourcing speciality coffee from all over the world.</p>
+        <p class="lead">Sustainable, organic, fair trade coffee from the best farmers in the world</p>
         <hr class="my-4 jumbotron-divider">
         <p>We now supplement our own barista training courses with SCA Coffee Skills modules. <span class="badge badge-light">New!</span></p>
-
       </div>
     </div>
   </div>
@@ -69,11 +68,21 @@
       <div class="quote-landing">
         <p class="quote">Life is too short, enjoy your coffee</p>
       </div>
-      
     </div>
   </div>
 </div>
 
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="about">
+        <p>We are a wholesale coffee roastery renowned for sourcing speciality coffee from all over the world.</p>
+        <p>We currently supply some 200 venues nationwide with fresh roasted coffee to order.</p>
+        <p>It’s not just about the beans thought. We have a dedicated team of trainers doing the rounds to ensure that you are making our coffee right.</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
