changes to hero img and jumbotron

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <! --- navbar --->
 
-  <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/Coffee-Project-Logo.png" width="120px" alt="bbb-logo"></a>
+  <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -52,9 +52,10 @@
     <div class="col">
       <div class="jumbotron jumbotron-container">
         <h1 class="display-4">Welcome</h1>
-        <p class="lead">Sustainable, organic, fair trade coffee from the best farmers in the world</p>
+        <p class="lead">We bring you sustainable, organic, fair trade coffee from the best farmers in the world</p>
         <hr class="my-4 jumbotron-divider">
-        <p>We now supplement our own barista training courses with SCA Coffee Skills modules. <span class="badge badge-light">New!</span></p>
+        <p>We now supplement our own barista training courses with SCA Coffee Skills modules.</p>
+        <p>Browse our full list<span>&nbsp</span><a href="#" class="badge badge-light">New</a></p>
       </div>
     </div>
   </div>
@@ -66,7 +67,7 @@
   <div class="row">
     <div class="col">
       <div class="quote-landing">
-        <p class="quote">Life is too short, enjoy your coffee</p>
+        <p class="quote">'Life is too short, enjoy your coffee'</p>
       </div>
     </div>
   </div>
@@ -84,6 +85,7 @@
   </div>
 </div>
 
+<! --- beans --->
 
 
 
