changes to our beans header and media queries adjustments

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h1 class="display-4">Welcome</h1>
         <p class="lead">We bring you sustainable, organic, fair trade coffee from the best farmers in the world</p>
         <hr class="my-4 jumbotron-divider">
-        <span>&nbsp</span>
+        
         <p>We now supplement our own barista training courses with SCA Coffee Skills modules.</p>
         <p>Browse our full list<span>&nbsp</span><a href="#" class="badge badge-light">New</a></p>
       </div>
@@ -91,7 +91,7 @@
 <div class="container ourbeans">
   <div class="row">
     <div class="col-12">
-     <img src="./assets/images/our-beans.png" alt="roasted coffee beans image" width=100%>
+     <img src="./assets/images/our-beans.png" class="ourbeans-img" alt="roasted coffee beans image" width=100% height=80px>
      <div class="ourbeansheader">our beans</div>
     </div>
   </div>
