--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h1 class="display-4">Welcome</h1>
         <p class="lead">We bring you sustainable, organic, fair trade coffee from the best farmers in the world</p>
         <hr class="my-4 jumbotron-divider">
-        
+
         <p>We now supplement our own barista training courses with SCA Coffee Skills modules.</p>
         <p>Browse our full list<span>&nbsp</span><a href="#" class="badge badge-light">New</a></p>
       </div>
@@ -91,25 +91,64 @@
 <div class="container ourbeans">
   <div class="row">
     <div class="col-12">
-     <img src="./assets/images/our-beans.png" class="ourbeans-img" alt="roasted coffee beans image" width=100% height=80px>
-     <div class="ourbeansheader">our beans</div>
+      <img src="./assets/images/our-beans.png" class="ourbeans-img" alt="roasted coffee beans image" width=100% height=80px>
+      <div class="ourbeansheader">our beans</div>
     </div>
   </div>
 </div>
 
-<section>
+<! --- cards for beans section --->
 
-</section>
+<div class="container">
+  <div class="row cards-beans">
+    <div class="col-12">
 
-<footer>
+      <div class="card1">
+        <div class="card" style="width: 100%">
+          <div class="card-header">
+            Single Origin
+          </div>
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dicta.</p>
+            <a href="#" class="btn btn-secondary">Read more</a>
+          </div>
+        </div>
+      </div>
 
-</footer>
+      <div class="card2">
+        <div class="card" style="width: 100%">
+          <div class="card-header">
+            Blends
+          </div>
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dicta.</p>
+            <a href="#" class="btn btn-secondary">Read more</a>
+          </div>
+        </div>
+      </div>
 
-<body>
+    </div>
+  </div>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
+
+
+
+
+  <section>
+
+  </section>
+
+  <footer>
+
+  </footer>
+
+  <body>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 
 </html>
