--- a/index.html
+++ b/index.html
@@ -101,36 +101,36 @@
 
 <div class="container">
   <div class="row cards-beans">
-    <div class="col-12">
-
-      <div class="card1">
-        <div class="card" style="width: 100%">
-          <div class="card-header">
-            Single Origin
-          </div>
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Very often we are buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
-            <a href="#" class="btn btn-secondary">Read more</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="card2">
-        <div class="card" style="width: 100%">
-          <div class="card-header">
-            Blends
-          </div>
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
-            <a href="#" class="btn btn-secondary">Read more</a>
+      <div class="col-12 col-md-6">
+        <div class="card1">
+          <div class="card" style="width: 100%">
+            <div class="card-header">
+              Single Origin
+            </div>
+            <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image">
+            <div class="card-body">
+              <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Very often we are buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
+              <a href="#" class="btn btn-secondary">Read more</a>
+            </div>
           </div>
         </div>
       </div>
 
+      <div class="col-12 col-md-6">
+        <div class="card2">
+          <div class="card" style="width: 100%">
+            <div class="card-header">
+              Blends
+            </div>
+            <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
+            <div class="card-body">
+              <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
+              <a href="#" class="btn btn-secondary">Read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
 
 
 
