--- a/index.html
+++ b/index.html
@@ -101,38 +101,53 @@
 
 <div class="container">
   <div class="row cards-beans">
-      <div class="col-12 col-md-6">
-        <div class="card1">
-          <div class="card" style="width: 100%">
-            <div class="card-header">
-              Single Origin
-            </div>
-            <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image">
-            <div class="card-body">
-              <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Very often we are buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
-              <a href="#" class="btn btn-secondary">Read more</a>
-            </div>
+    <div class="col-12 col-md-6">
+      <div class="card1">
+        <div class="card" style="width: 100%">
+          <div class="card-header">
+            <h3>Single Origin</h3>
           </div>
-        </div>
-      </div>
-
-      <div class="col-12 col-md-6">
-        <div class="card2">
-          <div class="card" style="width: 100%">
-            <div class="card-header">
-              Blends
-            </div>
-            <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
-            <div class="card-body">
-              <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
-              <a href="#" class="btn btn-secondary">Read more</a>
-            </div>
+          <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image">
+          <div class="card-body">
+            <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Very often we are buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
+            <a href="#" class="btn btn-secondary">Read more</a>
           </div>
         </div>
       </div>
     </div>
 
+    <div class="col-12 col-md-6">
+      <div class="card2">
+        <div class="card" style="width: 100%">
+          <div class="card-header">
+            <h3>Blends</h3>
+          </div>
+          <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
+          <div class="card-body">
+            <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
+            <a href="#" class="btn btn-secondary">Read more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <! --- sca courses --->
+
+  <div class="sca-section">
+    <div class="container">
+      <div class="row">
+        <div class="sca-img col-12 col-md-4">
+          <img src="./assets/images/sca-courses-img1.png" alt="coffee books on shelf image" width=100%>
+        </div>
+
+        <div class="col-12 col-md-8">
+          <h2>SCA Courses</h2>
+          <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+        </div>
+      </div>
+      </div>
+    </div>
 
 
 
