added pdfs and brew guides header

--- a/index.html
+++ b/index.html
@@ -135,25 +135,42 @@
   <! --- sca courses --->
 
   <div class="sca-section">
-    <div class="container">
-      <div class="row">
-        <div class="sca-img col-12 col-md-4">
-          <img src="./assets/images/sca-courses-img1.png" alt="coffee books on shelf image" width=100%>
-        </div>
 
-        <div class="col-12 col-md-8">
+    <div class="container">
+      <div class="row no-gutters">
+
+
+        <div class="sca-text col-9">
           <h2>SCA Courses</h2>
-          <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+          <p>Lorem ipsum dolor sit amet, an his etiam torquatos.</p>
+          <p>Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur.</p>
+          <p>Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+          <button type="button" class="btn btn-outline-secondary">Browse courses</button>
+        </div>
+  
+      
+      <div class="row">
+        <div class="col-3">
+         <img src="./assets/images/sca-logo.png" alt="sca logo image" width=200 height=200></img> 
         </div>
       </div>
       </div>
     </div>
+  </div>
+  
+  
+  <! --- brew guides --->
+  
+<div class="container brewguides">
+  <div class="row">
+    <div class="col-12">
+      <img src="./assets/images/brew-guides.png" class="brewguides-img" alt="brewing methods image" width=100% height=200px>
+      <div class="brewguidesheader">brew guides</div>
+    </div>
+  </div>
+</div>
 
 
-
-  <section>
-
-  </section>
 
   <footer>
 
