added info to README.md and icons

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image">
             <div class="card-body">
               <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Very often we are buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
-              <a href="#" class="btn btn-secondary">Read more</a>
+              <a href="#" class="btn btn-light">Read more</a>
             </div>
           </div>
         </div>
@@ -126,72 +126,89 @@
             <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
             <div class="card-body">
               <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
-              <a href="#" class="btn btn-secondary">Read more</a>
+              <a href="#" class="btn btn-light">Read more</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
-<! --- bg color change --->
 
-<div class="container bgwhite">
+<! --- sca courses --->
 
-  <! --- sca courses --->
-
-  <div class="sca-section">
-
-    <div class="container">
-      <div class="row no-gutters">
-
-
-        <div class="sca-text col-9">
-          <h2>SCA Courses</h2>
-          <p>Lorem ipsum dolor sit amet, an his etiam torquatos.</p>
-          <p>Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur.</p>
-          <p>Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
-          <button type="button" class="btn btn-outline-secondary">Browse courses</button>
-        </div>
-
-
-
-        <div class="col-3">
-          <img src="./assets/images/sca-logo.png" alt="sca logo image" width=200 height=200></img>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
-  <! --- brew guides --->
-
-  <div class="container brewguides">
-    <div class="row">
-      <div class="col-12">
-        <img src="./assets/images/brew-guides.png" class="brewguides-img" alt="brewing methods image" width=100% height=200px>
-        <div class="brewguidesheader">brew guides</div>
-      </div>
-    </div>
-  </div>
-
-  <! --- link to page/downloadable pdfs --->
+<div class="sca-section">
 
   <div class="container">
     <div class="row no-gutters">
-      <div class="col">
-        <ul id="methods" class="list-inline">
 
-          <li class="col-6"> <a href="#"> <img src="./assets/images/chemex.png">pour over</li></a>
-            <li class="col-6"> <a href="#"> <img src="./assets/images/espresso-machine.png">espresso</li></a>
-              <li class="col-6"> <a href="#"> <img src="./assets/images/aeropress.png">aeropress</li></a>
-                <li class="col-6"> <a href="#"> <img src="./assets/images/french-press.png">cafetiere</li></a>
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-12">
+            <img src="./assets/images/sca-logo.png" alt="sca logo image" width=200 height=200></img>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="sca-text col-12">
+      <h2>SCA Courses</h2>
+      <p>Lorem ipsum dolor sit amet, an his etiam torquatos.</p>
+      <p>Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur.</p>
+      <p>Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+      <button type="button" class="btn btn-outline-secondary">Browse courses</button>
+    </div>
+  </div>
+</div>
 
 
-        </ul>
+
+<! --- brew guides --->
+
+<div class="container brewguides">
+  <div class="row">
+    <div class="col-12">
+      <img src="./assets/images/brew-guides.png" class="brewguides-img" alt="brewing methods image" width=100% height=200px>
+      <div class="brewguidesheader">brew guides</div>
+    </div>
+  </div>
+</div>
+
+<! --- link to page/downloadable pdfs --->
+
+<div class="container brew-cards">
+  <div class="row no-gutters">
+
+    <div class="col-sm-3 col-md-12 col-lg-12">
+
+      <div class="card-group">
+
+        <div class="card">
+          <img class="card-img-top" src="./assets/images/chemex.png" alt="chemex icon">
+          <div class="card-body text-center">
+            <span><a href="#">chemex</span></a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="./assets/images/espresso-machine.png" alt="espresso machine icon">
+          <div class="card-body text-center">
+            <span><a href="#">espresso</span></a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top" src="./assets/images/aeropress.png" alt="aeropress icon">
+          <div class="card-body text-center">
+            <span><a href="#">aeropress</span></a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="./assets/images/french-press.png" alt="french press icon">
+          <div class="card-body text-center">
+            <span><a href="#">cafetiere</span></a>
+          </div>
+        </div>
 
 
 
@@ -200,6 +217,8 @@
     </div>
   </div>
 </div>
+
+
 
 
 <footer>
