linked chemex.html

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div class="card">
           <img class="card-img-top" src="./assets/images/chemex.png" alt="chemex icon">
           <div class="card-body text-center">
-            <span><a href="#">chemex</span></a>
+            <span><a href="chemex.html">chemex</span></a>
           </div>
         </div>
         <div class="card">
@@ -200,12 +200,14 @@
 
         <div class="card">
           <img class="card-img-top" src="./assets/images/aeropress.png" alt="aeropress icon">
+          
           <div class="card-body text-center">
             <span><a href="#">aeropress</span></a>
           </div>
         </div>
         <div class="card">
           <img class="card-img-top" src="./assets/images/french-press.png" alt="french press icon">
+         
           <div class="card-body text-center">
             <span><a href="#">cafetiere</span></a>
           </div>
