--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="card">
           <img class="card-img-top" src="./assets/images/espresso-machine.png" alt="espresso machine icon">
           <div class="card-body text-center">
-            <span><a href="#">espresso</span></a>
+            <span><a href="espresso.html">espresso</span></a>
           </div>
         </div>
 
@@ -203,14 +203,14 @@
           <img class="card-img-top" src="./assets/images/aeropress.png" alt="aeropress icon">
           
           <div class="card-body text-center">
-            <span><a href="#">aeropress</span></a>
+            <span><a href="aeropress.html">aeropress</span></a>
           </div>
         </div>
         <div class="card">
           <img class="card-img-top" src="./assets/images/french-press.png" alt="french press icon">
          
           <div class="card-body text-center">
-            <span><a href="#">cafetiere</span></a>
+            <span><a href="cafetiere.html">cafetiere</span></a>
           </div>
         </div>
 
