added links to download pdfs

--- a/aeropress.html
+++ b/aeropress.html
@@ -13,82 +13,90 @@
 
 <body>
 
-<header>
+    <header>
 
-    <! --- navbar --->
+        <! --- navbar --->
 
-    <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
-        <div class="collapse navbar-collapse " id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Our coffees</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="# ">Brewing guides</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Intro to coffee</a>
-                        <a class="dropdown-item" href="#">Barista SCA</a>
-                        <a class="dropdown-item" href="#">Brewing SCA</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-
-</header>
-
-<div class="container">
-    <div class="chemex-container">
-        <div class="row">
-            <div class="col">
-                <h2>The Aeropress</h2>
-
-                <p>It is a great method for brewing a single cup at home - quick, clean and easy. However, in our opinion, the instructions that Aeropress provide themselves are not the best way to use this brewer!</p>
-                <p>Here’s the method we use ourselves:</p>
-                <p>You will need:</p>
-
-                <ul>
-                    <li>Aeropress</li>
-                    <li>Scales</li>
-                    <li>Timer</li>
-                    <li>Two filter papers</li>
-                    <li>17g coffee</li>
-                    <li>250 filtered water, just off the boil</li>
-                    <li>Sturdy jug or mug</li>
+            <div class="collapse navbar-collapse " id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Our coffees</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="# ">Brewing guides</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Intro to coffee</a>
+                            <a class="dropdown-item" href="#">Barista SCA</a>
+                            <a class="dropdown-item" href="#">Brewing SCA</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
                 </ul>
+            </div>
+        </nav>
 
-                <ol>
-                    <li>Place two filter papers into cap and screw on tight.</li>
-                    <li>Rinse out with hot water and place on top of your jug.</li>
-                    <li>Grind 17g of coffee and put into the chamber.</li>
-                    <li>Pour in 250g of water and immediately start a timer.</li>
-                    <li>Stir thoroughly (we use three stirs clockwise and three anticlockwise).</li>
-                    <li>Put the plunger just inside the chamber.</li>
-                    <li>Once the timer reaches 1:30, start to push down on the plunger.</li>
-                    <li>Aim to finish plunging at 2:00.</li>
-                </ol>
 
-                <h4>enjoy!</h4>
+    </header>
 
+    <div class="container">
+        <div class="chemex-container">
+            <div class="row">
+                <div class="col">
+                    <h2>The Aeropress</h2>
+
+                    <p>It is a great method for brewing a single cup at home - quick, clean and easy. However, in our opinion, the instructions that Aeropress provide themselves are not the best way to use this brewer!</p>
+                    <p>Here’s the method we use ourselves:</p>
+                    <p>You will need:</p>
+
+                    <ul>
+                        <li>Aeropress</li>
+                        <li>Scales</li>
+                        <li>Timer</li>
+                        <li>Two filter papers</li>
+                        <li>17g coffee</li>
+                        <li>250 filtered water, just off the boil</li>
+                        <li>Sturdy jug or mug</li>
+                    </ul>
+
+                    <ol>
+                        <li>Place two filter papers into cap and screw on tight.</li>
+                        <li>Rinse out with hot water and place on top of your jug.</li>
+                        <li>Grind 17g of coffee and put into the chamber.</li>
+                        <li>Pour in 250g of water and immediately start a timer.</li>
+                        <li>Stir thoroughly (we use three stirs clockwise and three anticlockwise).</li>
+                        <li>Put the plunger just inside the chamber.</li>
+                        <li>Once the timer reaches 1:30, start to push down on the plunger.</li>
+                        <li>Aim to finish plunging at 2:00.</li>
+                    </ol>
+
+                    <h4>enjoy!</h4>
+
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p>Want to download a printable pdf? Click <a href="./assets/images/Aeropress-Brew-Guide.pdf" target="_blank">here</a></p>
+            </div>
+        </div>
+    </div>
 
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
