--- a/cafetiere.html
+++ b/cafetiere.html
@@ -80,7 +80,19 @@
                     <p>After you’ve enjoyed your coffee, clean the press thoroughly - completely disassemble the mesh each time and wash in hot soapy water to ensure no coffee remains stuck in the mesh.</p>
 
                     <h4>Enjoy!</h4>
+                    
+</div>
+            </div>
+        </div>
+    </div>
 
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <p>Want to download a printable pdf? Click <a href="./assets/images/French-Press-Brew-Guide.pdf" target="_blank">here</a></p>
+                            </div>
+                        </div>
+                    </div>
 
                     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
                     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
