--- a/chemex.html
+++ b/chemex.html
@@ -13,78 +13,87 @@
 
 <body>
 
-<header>
+  <header>
 
-  <! --- navbar --->
+    <! --- navbar --->
 
-  <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
-    <div class="collapse navbar-collapse " id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Our coffees</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="# ">Brewing guides</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Intro to coffee</a>
-            <a class="dropdown-item" href="#">Barista SCA</a>
-            <a class="dropdown-item" href="#">Brewing SCA</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+      <div class="collapse navbar-collapse " id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Our coffees</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="# ">Brewing guides</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Intro to coffee</a>
+              <a class="dropdown-item" href="#">Barista SCA</a>
+              <a class="dropdown-item" href="#">Brewing SCA</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
 
-</header>
+  </header>
 
 
-<div class="container">
+  <div class="container">
     <div class="chemex-container">
-    <div class="row">
+      <div class="row">
         <div class="col">
-            <h2>V60 | Chemex | Kalita</h2>
+          <h2>V60 | Chemex | Kalita</h2>
 
-<p>There are subtle differences between the different brands of pour-over brewer, but they all follow the same principles and all produce delicate, refined brews.</p>
-<p>We suggest using a Buono pouring kettle but anything that allows you to pour a thin, steady stream of water will work. If you’re using a separate vessel for pouring then be sure to preheat it with boiling water, then add boiling water just before pouring, to minimise heat loss.</p>
-<p>The amounts suggested here are perfect for a V60 02 size brewer - adjust the amounts accordingly for larger or smaller brewers.</p>
-<p>You will need:</p>
+          <p>There are subtle differences between the different brands of pour-over brewer, but they all follow the same principles and all produce delicate, refined brews.</p>
+          <p>We suggest using a Buono pouring kettle but anything that allows you to pour a thin, steady stream of water will work. If you’re using a separate vessel for pouring then be sure to preheat it with boiling water, then add boiling water just before
+            pouring, to minimise heat loss.</p>
+          <p>The amounts suggested here are perfect for a V60 02 size brewer - adjust the amounts accordingly for larger or smaller brewers.</p>
+          <p>You will need:</p>
 
-<ul>
-  <li>Filter cone</li>
-  <li>Filter paper to fit</li>
-  <li>Pouring kettle</li>
-  <li>Scales</li>
-  <li>Timer</li>
-  <li>Filtered water, just off the boil</li>
-  <li>60g of coffee per litre of water</li>
-  <li>Jug or mug</li>
-  </ul>  
-  
-<ol>
-  <li>Put filter into cone and rinse thoroughly with hot water.</li>
-  <li>Add 30g ground coffee and shake lightly to settle. </li>
-  <li>Set up cone and jug on the scales, set scales to zero and start a timer.</li>
-  <li>Pour on about 60g of water and stir thoroughly to ensure all the grounds are evenly wetted.</li>
-  <li>Wait until the coffee stops producing gas bubbles - about 30 seconds should do it. </li>
-  <li>Gradually pour on the remaining water until you reach 500g. Pour in gentle spirals onto the surface of the coffee, so that the water reaches all parts of the coffee evenly.</li>
-  <li>Aim to have all the water in the brewer by 2:00.</li>
-  
-<h4>Enjoy!</h4>
+          <ul>
+            <li>Filter cone</li>
+            <li>Filter paper to fit</li>
+            <li>Pouring kettle</li>
+            <li>Scales</li>
+            <li>Timer</li>
+            <li>Filtered water, just off the boil</li>
+            <li>60g of coffee per litre of water</li>
+            <li>Jug or mug</li>
+          </ul>
+
+          <ol>
+            <li>Put filter into cone and rinse thoroughly with hot water.</li>
+            <li>Add 30g ground coffee and shake lightly to settle. </li>
+            <li>Set up cone and jug on the scales, set scales to zero and start a timer.</li>
+            <li>Pour on about 60g of water and stir thoroughly to ensure all the grounds are evenly wetted.</li>
+            <li>Wait until the coffee stops producing gas bubbles - about 30 seconds should do it. </li>
+            <li>Gradually pour on the remaining water until you reach 500g. Pour in gentle spirals onto the surface of the coffee, so that the water reaches all parts of the coffee evenly.</li>
+            <li>Aim to have all the water in the brewer by 2:00.</li>
+
+            <h4>Enjoy!</h4>
 
         </div>
+      </div>
     </div>
-</div>
-</div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <p>Want to download a printable pdf? Click <a href="./assets/images/V60-Chemex-Brew-Guide.pdf" target="_blank">here</a></p>
+      </div>
+    </div>
+  </div>
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
