--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image">
               <div class="card-body">
                 <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Very often we are buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
-                <a href="#" class="btn btn-light">Read more</a>
+                <a href="coffees-single.html" class="btn btn-light">Read more</a>
               </div>
             </div>
           </div>
@@ -128,7 +128,7 @@
               <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
               <div class="card-body">
                 <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
-                <a href="#" class="btn btn-light">Read more</a>
+                <a href="coffees-blends.html" class="btn btn-light">Read more</a>
               </div>
             </div>
           </div>
