--- a/aeropress.html
+++ b/aeropress.html
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse " id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Our coffees</a>
+                        <a class="nav-link" href="coffees.html">Our coffees</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="# ">Brewing guides</a>
+                        <a class="nav-link" href="brewing.html">Brewing guides</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
@@ -38,7 +38,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -48,11 +48,11 @@
     </header>
 
     <div class="container">
-        <div class="chemex-container">
+        <div class="brewing-container">
             <div class="row">
                 <div class="col">
                     <h2>The Aeropress</h2>
-
+                    <hr>
                     <p>It is a great method for brewing a single cup at home - quick, clean and easy. However, in our opinion, the instructions that Aeropress provide themselves are not the best way to use this brewer!</p>
                     <p>Here’s the method we use ourselves:</p>
                     <p>You will need:</p>
@@ -78,7 +78,7 @@
                         <li>Aim to finish plunging at 2:00.</li>
                     </ol>
 
-                    <h4>enjoy!</h4>
+                    <h4>Enjoy!</h4>
 
                 </div>
             </div>
@@ -88,7 +88,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p>Want to download a printable pdf? Click <a href="./assets/images/Aeropress-Brew-Guide.pdf" target="_blank">here</a></p>
+                <p class="brewing-download">Want to download a printable pdf? Click <a href="./assets/images/Aeropress-Brew-Guide.pdf" target="_blank">here</a></p>
             </div>
         </div>
     </div>
