--- a/cafetiere.html
+++ b/cafetiere.html
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse " id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Our coffees</a>
+                        <a class="nav-link" href="coffees.html">Our coffees</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="# ">Brewing guides</a>
+                        <a class="nav-link" href="brewing.html">Brewing guides</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
@@ -38,7 +38,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -48,11 +48,11 @@
     </header>
 
     <div class="container">
-        <div class="chemex-container">
+        <div class="brewing-container">
             <div class="row">
                 <div class="col">
                     <h2>The French Press (Cafetiere)</h2>
-
+                    <hr>
                     <p>It is probably the first brewing method most of us encounter. It’s simple to use and can make delicious coffee - however, because it only uses a metal mesh filter, fine particles can escape and leave a bit of sludge in the bottom of
                         the cup.</p>
                     <p>This method helps to minimise this so you can enjoy the full flavours and body of this brew method.</p>
@@ -89,7 +89,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <p>Want to download a printable pdf? Click <a href="./assets/images/French-Press-Brew-Guide.pdf" target="_blank">here</a></p>
+                                <p class="brewing-download">Want to download a printable pdf? Click <a href="./assets/images/French-Press-Brew-Guide.pdf" target="_blank">here</a></p>
                             </div>
                         </div>
                     </div>
