--- a/courses.html
+++ b/courses.html
@@ -11,6 +11,8 @@
     <title>Coffee Project Co.</title>
 </head>
 
+<body>
+
 <header>
 
     <! --- navbar --->
@@ -44,9 +46,44 @@
 
 </header>
 
+
 <! --- main section --->
 
+<div class="container-fluid courses-container">
+    <div class="row">
+        <div class="col-3">
+            <ul>
+                <li><a href="#home">Introductory</a></li>
+                <li><a href="#news">Foundation</a></li>
+                <li><a href="#contact">Advanced</a></li>
+                
+                </ul>
+        </div>
 
+        <div class="col-9">
+            <div class="card">
+
+                <! --- heading --->
+
+                <div class="card-body">
+                    <h4 class="card-title">Sun Gone</h4>
+                    <h6 class="card-subtitle text-muted">Sun disappears!</h6>
+                </div>
+
+                <! --- image --->
+
+                <img src="/pix/samples/12s.jpg" alt="Photo of sunset">
+
+                <! --- content --->
+
+                <div class="card-body">
+                    <p class="card-text">The sun disappeared behind the horizon today. Experts claim it could be gone for good!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
 
 
 
@@ -63,7 +100,7 @@
 
 </footer>
 
-<body>
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
