--- a/espresso.html
+++ b/espresso.html
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse " id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Our coffees</a>
+                        <a class="nav-link" href="coffees.html">Our coffees</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="# ">Brewing guides</a>
+                        <a class="nav-link" href="brewing.html">Brewing guides</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
@@ -38,7 +38,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -48,11 +48,11 @@
     </header>
 
     <div class="container">
-        <div class="chemex-container">
+        <div class="brewing-container">
             <div class="row">
                 <div class="col">
                     <h2>Espresso | The shot</h2>
-
+                    <hr>
                     <p>Before you even begin, be sure to preheat your machine, portafilter and cup by pulling a ‘blank’ shot, which means running water through the portafilter and cup without using espresso.</p>
                     <p>Depending on your espresso machine, it make take 15-30 minutes to heat up.</p>
                     <p>You will need:</p>
@@ -97,7 +97,7 @@
                         </li>
                     </ol>
 
-                    <h4>enjoy!</h4>
+                    <h4>Enjoy!</h4>
 
                 </div>
             </div>
@@ -107,7 +107,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p>Want to download a printable pdf? Click <a href="./assets/images/Espresso-Brew-Guide.pdf" target="_blank">here</a></p>
+                <p class="brewing-download">Want to download a printable pdf? Click <a href="./assets/images/Espresso-Brew-Guide.pdf" target="_blank">here</a></p>
             </div>
         </div>
     </div>
